--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 html {
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   padding: 10px;
   background-color: #fcf8f3;
 }
@@ -18,7 +18,7 @@ body {
   background-color: #f0ebe3;
   border-radius: 20px;
   width: 100%;
-  /* height: 100vh; */
+  height: 100%;
 }
 
 #root {
@@ -27,7 +27,7 @@ body {
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 30px;
   position: relative;
   display: flex;
@@ -196,7 +196,6 @@ body {
 }
 
 .main {
-  margin-top: 100px;
   background-color: #dcd7c9;
   background-repeat: no-repeat;
   width: 500px;
