--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ body {
 }
 
 .app {
+  font-family: "Gowun Dodum", sans-serif;
   width: 100%;
   height: 100%;
   padding: 30px;
@@ -36,9 +37,9 @@ body {
 }
 
 .apploading {
-  background-color: #a8a4ce;
+  background-color: #f0ebe3;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
