--- a/src/App.css
+++ b/src/App.css
@@ -1,159 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap");
 
-.abouttitle {
-  color: white;
-}
-
-html {
-  width: 100%;
-  height: 100%;
-  padding: 10px;
-  background-color: #fcf8f3;
-}
-
-body {
-  /* background: url("https://t1.daumcdn.net/cfile/tistory/2269703D55ADE90707")
-    center center/cover; */
-  /* background-color: #907fa4; */
-  background-color: #f0ebe3;
-  border-radius: 20px;
-  width: 100%;
-  height: 100%;
-}
-
-#root {
-  height: 100%;
-}
-
 .app {
   font-family: "Gowun Dodum", sans-serif;
-  width: 100%;
-  height: 100%;
-  padding: 30px;
-  position: relative;
-  display: flex;
-  justify-content: center;
   transition: 500ms;
+  background-color: #f0ebe3;
 }
 
 .apploading {
   background-color: #f0ebe3;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-}
-
-.nav {
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.nav-item {
-  text-decoration: none;
-  color: white;
-  z-index: 1;
-  margin: 15px;
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.nav-item:hover {
-  color: #2c3639;
-}
-
-.hometitle {
-  white-space: pre-wrap;
-  text-align: center;
-  font-weight: 1000;
-  /* font-size: 12em; */
-  font-size: 10rem;
-  color: whitesmoke;
-  line-height: 8rem;
-  text-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
-    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-
-.homesubtitle {
-  font-size: 15px;
-  text-align: center;
-  color: whitesmoke;
-  text-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
-    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
-}
-
-.nav-item:after {
-  display: block;
-  content: "";
-  border-bottom: solid 3px white;
-  transform: scaleX(0);
-  transition: transform 250ms ease-in-out;
-}
-.nav-item:hover:after {
-  transform: scaleX(1);
-}
-.nav-item.fromRight:after {
-  transform-origin: 100% 50%;
-}
-.nav-item.fromLeft:after {
-  transform-origin: 0% 50%;
-}
-
-@media screen and (max-width: 768px) {
-  .hometitle {
-    font-size: 10rem;
-    transition: 500ms;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .hometitle {
-    font-size: 8rem;
-    transition: 500ms;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .hometitle {
-    font-size: 4rem;
-    line-height: 4rem;
-
-    transition: 500ms;
-  }
-}
-
-@media screen and (max-width: 300px) {
-  .hometitle {
-    font-size: 2rem;
-    line-height: 2rem;
-    transition: 500ms;
-  }
-  #root {
-    padding: 10px;
-  }
-}
-
-@media screen and (max-height: 600px) {
-  .hometitle {
-    font-size: 3rem;
-    line-height: 4rem;
-    transition: 500ms;
-  }
-}
-
-@media screen and (max-height: 300px) {
-  .hometitle {
-    font-size: 1rem;
-    line-height: 0.8rem;
-    transition: 500ms;
-    margin-bottom: 5px;
-  }
-}
+/* 날씨 앱..*/
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
 
